--- a/style.css
+++ b/style.css
@@ -1,31 +1,22 @@
-.item{
-    background-color: tomato;
-    border-radius: 10px;
-    font-size: 1.5em;
-    margin: 5px;
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
 }
-.container{
-    max-width: 400px;
-    border: 1px solid #ccc;
-    margin: 0 auto;
+ul {
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+    justify-content: end;
+    padding: 10px;
 }
-.item2{
-    background-color: tomato;
-    border-radius: 10px;
-    font-size: 1.5em;
-    margin: 5px;
-    text-align: center;
+li{
+   font-family: "Ruum Kufi", sans-serif !important;
+    font-size: 1.5rem;
+    padding: 10px
 }
-.container2{
-    max-width: 400px;
-    border: 1px solid #ccc;
-    margin: 0 auto;
+li:hover {
+    color: rgb(255, 255, 255);
+    background-color: black;
+    border: 5px solid black;
+    border-radius: 20px;
 }
-#titulo{
-    text-align: center;
-}
-
-
-
-
