--- a/style.css
+++ b/style.css
@@ -2,21 +2,35 @@
     margin: 0;
     padding: 0;
 }
-ul {
+.nav-bar{
     display: flex;
-    text-decoration: none;
-    list-style: none;
+    width: 100%;
+    height: 50px;
+    background-color: #9BADFE;
     justify-content: end;
-    padding: 10px;
+    align-items: center;
 }
-li{
-   font-family: "Ruum Kufi", sans-serif !important;
-    font-size: 1.5rem;
-    padding: 10px
+.navegation{
+    display: flex;
+    list-style: none;
 }
-li:hover {
-    color: rgb(255, 255, 255);
-    background-color: black;
-    border: 5px solid black;
-    border-radius: 20px;
+.item1{
+    position: absolute;
+    left: 1px;
+    background-color: #B6C3FE;
+    border-radius: 2px;
+    margin-left: 5px;
+    border: 1px solid #6984FE;
+    padding: 5px;
+}
+.item{
+    margin-left: 15px;
+    margin-right: 10px;
+    background-color: #B6C3FE;
+    border-radius: 2px;
+    border: 1px solid #6984FE;
+    padding: 5px;
+}
+.content-box{
+    height: 500px;
 }
