--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     display: flex;
     width: 100%;
     height: 50px;
-    background-color: #9BADFE;
     justify-content: end;
     align-items: center;
 }
@@ -17,20 +16,34 @@
 .item1{
     position: absolute;
     left: 1px;
-    background-color: #B6C3FE;
-    border-radius: 2px;
+
+    border-radius: 6px;
     margin-left: 5px;
-    border: 1px solid #6984FE;
+
     padding: 5px;
 }
 .item{
     margin-left: 15px;
     margin-right: 10px;
-    background-color: #B6C3FE;
-    border-radius: 2px;
-    border: 1px solid #6984FE;
+    border-radius: 6px;
     padding: 5px;
 }
 .content-box{
-    height: 500px;
+    height: 200px;
+    width: 300px;
+    margin-top: 100px;
+    color: beige;
+    padding-left: 20px;
+}
+#li-item{
+    font-weight: bolder;
+    font-family: "Tiny5", serif;
+    border: 1px solid #104b3f;
+    background-color: #1c453c;
+    color: beige;
+}
+body{
+    background-color: black;
+    font-family: "VT323", serif;
+    font-weight: 400;
 }
