--- a/style.css
+++ b/style.css
@@ -29,13 +29,17 @@
     padding: 5px;
 }
 .content-box{
+    font-size: 1.5rem;
     height: 200px;
-    width: 300px;
+    width: 400px;
     margin-top: 100px;
     color: beige;
     padding-left: 20px;
+    box-sizing: border-box;
 }
 #li-item{
+    font-size: 1.5rem;
+    margin-top: 10px;
     font-weight: bolder;
     font-family: "Tiny5", serif;
     border: 1px solid #104b3f;
