--- a/style.css
+++ b/style.css
@@ -2,24 +2,22 @@
     margin: 0;
     padding: 0;
 }
-.nav-bar{
+.main-navbar{
     display: flex;
     width: 100%;
     height: 50px;
     justify-content: end;
     align-items: center;
 }
-.navegation{
+.main-navegation{
     display: flex;
     list-style: none;
 }
 .item1{
     position: absolute;
     left: 1px;
-
     border-radius: 6px;
     margin-left: 5px;
-
     padding: 5px;
 }
 .item{
@@ -28,10 +26,10 @@
     border-radius: 6px;
     padding: 5px;
 }
-.content-box{
-    font-size: 1.5rem;
+.description-container{
+    font-size: 3rem;
     height: 200px;
-    width: 400px;
+    max-width: 900px;
     margin-top: 100px;
     color: beige;
     padding-left: 20px;
@@ -50,4 +48,8 @@ body{
     background-color: black;
     font-family: "VT323", serif;
     font-weight: 400;
+}
+.content-box h1{
+   color: rgb(248, 248, 230); 
+   font-size: 50px;
 }
