--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ body{
    color: rgb(248, 248, 230); 
    font-size: 50px;
 }
+#li-item{
+    cursor: pointer;
+}
+.btn-function{
+    cursor: pointer;
+}
