--- a/style.css
+++ b/style.css
@@ -40,22 +40,28 @@
     margin-top: 10px;
     font-weight: bolder;
     font-family: "Tiny5", serif;
-    border: 1px solid #104b3f;
+    border: 2px solid #104b3f;
     background-color: #1c453c;
-    color: beige;
+    color: rgb(200, 200, 189); 
 }
 body{
-    background-color: black;
+    background-color: rgb(23, 23, 23);
     font-family: "VT323", serif;
     font-weight: 400;
 }
 .content-box h1{
-   color: rgb(248, 248, 230); 
+   color: rgb(200, 200, 189); 
    font-size: 50px;
 }
 #li-item{
     cursor: pointer;
+    transition: 0.5s;
 }
 .btn-function{
     cursor: pointer;
+}
+#li-item:hover{
+    border-color: #1c453c;
+    background-color: #232323;
+    color: #1c453c;
 }
